--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/app.css">
     <title>QQ 音乐</title>
 </head>
+
 <body>
     <header id="header">
         <h1>QQ音乐</h1>
         <img src="./images/logo.png" alt="logo" id="logo">
     </header>
+    <nav class="navbar">
+        <ul class="nav-list">
+            <li class="nav-item active" data-role="tab" data-view=".rec-view">推荐</li>
+            <li class="nav-item" data-role="tab" data-view=".rank-view">排行榜</li>
+            <li class="nav-item" data-role="tab" data-view=".search-view">搜索</li>
+        </ul>
+    </nav>
+    <div class="tab-contents">
+        <div class="rec-view tab-content">
+            <div class="qq-slider" id="slider"></div>
+            <div class="radios">
+                <h2 class="title">电台</h2>
+                <div class="list"></div>
+            </div>
+            <div class="hotlists">
+                <h2 class="title">热门歌单</h2>
+                <div class="list"></div>
+            </div>
+        </div>
+        <div id="rank-view" class="rank-view hide tab-content">
+            <ul class="toplist">
+            </ul>
+        </div>
+        <div class="search-view hide tab-content">
+            搜索
+        </div>
+    </div>
+    <script src="scripts/slider.js"></script>
+    <script src="scripts/lazyload.js"></script>
+    <script src="scripts/app.js"></script>
+    <script src="scripts/tab.js"></script>
 </body>
+
 </html>
