--- a/index.html
+++ b/index.html
@@ -37,11 +37,27 @@
             <ul class="toplist">
             </ul>
         </div>
-        <div class="search-view hide tab-content">
-            搜索
+        <div id="search-view" class="search-view hide tab-content">
+            <div class="search-bar">
+                <div class="input-wrap">
+                    <input type="text" id="search" placeholder="搜索歌曲、歌单、专辑">
+                    <span class="icon-search"></span>
+                </div>
+            </div>
+            <div class="search-results">
+                <ul class="song-list">
+                    
+                </ul>
+            </div>
+            <div class="search-loading">
+                <i class="loaging-icon"></i>
+                <div class="loading-text">正在载入更多</div>
+                <div class="loading-dong hide">已加载全部</div>
+            </div>
         </div>
     </div>
     <script src="scripts/slider.js"></script>
+    <script src="scripts/search.js"></script>
     <script src="scripts/lazyload.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/tab.js"></script>
