--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header id="header">
         <h1>QQ音乐</h1>
         <img src="./images/logo.png" alt="logo" id="logo">
+        <div class="show-player">播放器</div>
     </header>
     <nav class="navbar">
         <ul class="nav-list">
@@ -46,21 +47,47 @@
             </div>
             <div class="search-results">
                 <ul class="song-list">
-                    
+
                 </ul>
             </div>
             <div class="search-loading">
                 <i class="loaging-icon"></i>
-                <div class="loading-text">正在载入更多</div>
+                <div class="loading-text">正在载入更多...</div>
                 <div class="loading-dong hide">已加载全部</div>
             </div>
         </div>
     </div>
+    <div id="player">
+        <div class="player-container">
+            <div class="player-header">
+                <img class="album-cover">
+                <div class="song-info">
+                    <div class="song-name ellipsis"></div>
+                    <div class="song-artist ellipsis"></div>
+                </div>
+                <span class="icon-action icon-play"></span>
+            </div>
+            <div class="player-lyrics"></div>
+            <div class="player-footer">
+                <div class="icon-list"></div>
+                <div class="progress"></div>
+                <div class="actions">
+                    <a href="#" class="btn-download">下载这首歌</a>
+                </div>
+            </div>
+        </div>
+        <div class="player-background"></div>
+    </div>
+    <script src="./scripts/constant.js"></script>
+    <script src="./scripts/heplers.js"></script>
     <script src="scripts/slider.js"></script>
     <script src="scripts/search.js"></script>
     <script src="scripts/lazyload.js"></script>
-    <script src="scripts/app.js"></script>
     <script src="scripts/tab.js"></script>
+    <script src="scripts/progress_bar.js"></script>
+    <script src="scripts/lyrics_player.js"></script>
+    <script src="scripts/music_player.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 
 </html>
