--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
         </div>
         <div class="player-background"></div>
     </div>
+    <script>
+        !window.fetch && document.write('<script src="https://cdn.bootcss.com/fetch/2.0.3/fetch.min.js"><\/script>')
+    </script>
     <script src="./scripts/constant.js"></script>
     <script src="./scripts/heplers.js"></script>
     <script src="scripts/slider.js"></script>
