完成模块化，暂未引入webpack

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
     <div class="tab-contents">
-        <div class="rec-view tab-content">
+        <div id="rec-view" class="rec-view tab-content">
             <div class="qq-slider" id="slider"></div>
             <div class="radios">
                 <h2 class="title">电台</h2>
@@ -81,7 +81,7 @@
     <script>
         !window.fetch && document.write('<script src="https://cdn.bootcss.com/fetch/2.0.3/fetch.min.js"><\/script>')
     </script>
-    <script src="./scripts/constant.js"></script>
+    <!-- <script src="./scripts/constant.js"></script>
     <script src="./scripts/heplers.js"></script>
     <script src="scripts/slider.js"></script>
     <script src="scripts/search.js"></script>
@@ -90,7 +90,8 @@
     <script src="scripts/progress_bar.js"></script>
     <script src="scripts/lyrics_player.js"></script>
     <script src="scripts/music_player.js"></script>
-    <script src="scripts/app.js"></script>
+    <script src="scripts/app.js"></script> -->
+    <script type="module" src="scripts/app.js"></script>
 </body>
 
 </html>
