--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="dist/app.css">
     <title>QQ 音乐</title>
 </head>
 
@@ -81,17 +81,8 @@
     <script>
         !window.fetch && document.write('<script src="https://cdn.bootcss.com/fetch/2.0.3/fetch.min.js"><\/script>')
     </script>
-    <!-- <script src="./scripts/constant.js"></script>
-    <script src="./scripts/heplers.js"></script>
-    <script src="scripts/slider.js"></script>
-    <script src="scripts/search.js"></script>
-    <script src="scripts/lazyload.js"></script>
-    <script src="scripts/tab.js"></script>
-    <script src="scripts/progress_bar.js"></script>
-    <script src="scripts/lyrics_player.js"></script>
-    <script src="scripts/music_player.js"></script>
-    <script src="scripts/app.js"></script> -->
-    <script type="module" src="scripts/app.js"></script>
+    <!-- <script type="module" src="scripts/app.js"></script> -->
+    <script src="./dist/dist/app.js"></script>
 </body>
 
 </html>
